# viprs

./: .gitignore  .gitmodules  404.html  AI-DECLARATION.md  CHANGELOG.md  CITATION.md  LICENSE  MANIFEST.in  Makefile  PRSModel.pxd  PRSModel.pyx  README.md  VEM.py  evaluation.py  index.html  ldsc_h2.py  mkdocs.yml  objects.inv  optional-requirements.txt  prs_models.py  pyproject.toml  requirements-docs.txt  requirements-optional.txt  requirements.txt  run_lassosum.R  setup.py  simulate.py  snp_heritability_models.py  vem.py  vem_c.pyx
.github/workflows/: ci-docs.yml  ci-linux.yml  ci-osx.yml  ci-windows.yml  dockerhub.yml  publish-pypi.yml  wheels.yml
api/overview/: index.html
benchmarks/: benchmark_e_step.py
citation/: index.html
commandline/overview/: index.html
commandline/viprs_evaluate/: index.html
commandline/viprs_fit/: index.html
commandline/viprs_score/: index.html
containers/: cli.Dockerfile  jupyter.Dockerfile
deprecated/: vem.py
docs/: citation.md  download_ld.md  getting_started.md  index.md  installation.md
docs/api/: overview.md
docs/commandline/: overview.md  viprs_evaluate.md  viprs_fit.md  viprs_score.md
download_ld/: index.html
examples/: run_prs.py
faq/: index.html
getting_started/: index.html
installation/: index.html
notebooks/: VEM Experiments.ipynb  height_example.ipynb  test_ss.csv  test_ss_sample.csv  viprs_cli_example.ipynb
prs/: plotting.py  utils.py
prs/deprecated_code/: gibbs_c_sbayes.pyx  vem_c_cs.pyx  vem_c_sbayes.pyx  vem_c_sbayes_infinitesimal.pyx  vem_c_w_priors.pyx
prs/eval/: evaluation.py
prs/ext/: ldpred2.R  prs_models.py  run_lassosum.R  snp_heritability_models.py
prs/src/: GibbsPRS.pxd  GibbsPRS.pyx  GibbsPRSSBayes.pyx  HyperparameterSearch.py  PRSModel.pxd  PRSModel.pyx  PosteriorThresholding.py  VIPRS.pxd  VIPRS.pyx  VIPRSAlpha.pyx  VIPRSLDPred.pyx  VIPRSMix.pxd  VIPRSMix.pyx  VIPRSMixSBayes.pyx  VIPRSMultiCohort.py  VIPRSSBayes.pyx  VIPRSSBayesAlpha.pyx  c_utils.pxd  c_utils.pyx  evaluation.py  exceptions.py  gibbs_c.pyx  gibbs_c_opt.pyx  gibbs_c_sbayes.pyx  gibbs_c_sbayes_opt.pyx  utils.py  (+4 more)
search/: search_index.json
tests/: conda_manual_testing.sh  test_basic.py  test_binary_metrics.py  test_cli.sh  test_version.py  uv_manual_testing.sh
viprs/: __init__.py  _version.py  plot.py
(+85 files in other folders)
