[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "wheel",
    "cython",
    "extension-helpers",
    "scipy",
    "oldest-supported-numpy",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-extras = "test"
test-command = "pytest {project}/tests"
# Optional
build-verbosity = 1

